# s3smart

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
s3smart/: __init__.py  cli.py  version.py
