[metadata]
name = s3smart
version = 0.1.0
description = High-throughput S3 copy/sync utility
long_description = file: README.md
long_description_content_type = text/markdown
author = Jaleel Ahmed Mohammad
license = MIT

[options]
packages = find:
install_requires =
    boto3
    tqdm
python_requires = >=3.8
