[metadata]
name = s3smart
version = 1.0.0
author = Jaleel Ahmed Mohammad
description = Fast, Reliable S3 Transfers & Sync Utility
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/getjaleel/s3smart

[options]
packages = find:
python_requires = >=3.8
install_requires =
    boto3
    tqdm
    colorama

[options.entry_points]
console_scripts =
    s3smart = s3smart.cli:main